--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.2.5
+@version 4.2.6
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -460,6 +460,19 @@
 	{
 		outline: none !important;
 	}
+
+
+	/*3 dot dropdown menu*/
+	/*2024-06-02*/
+	ytd-menu-renderer .ytd-menu-renderer[style-target="button"] yt-icon
+	{
+		color: var(--main-text) !important;
+	}
+	ytd-menu-renderer .ytd-menu-renderer[style-target="button"] yt-icon:hover
+	{
+		color: var(--main-color) !important;
+	}
+
 
 	/*Placeholder image on pages that need an account - such as Subscriptions*/
 	ytd-background-promo-renderer .image.ytd-background-promo-renderer,
@@ -1948,15 +1961,6 @@
 		color: var(--main-color) !important;
 	}
 
-	/*queue dropdown*/
-	ytd-playlist-panel-renderer.ytd-watch-flexy ytd-playlist-panel-video-renderer yt-icon
-	{
-		color: var(--main-text) !important;
-	}
-	ytd-playlist-panel-renderer.ytd-watch-flexy ytd-playlist-panel-video-renderer yt-icon:hover
-	{
-		color: var(--main-color) !important;
-	}
 	/*download button*/
 	ytd-menu-service-item-download-renderer yt-icon {
 		color: var(--main-text) !important;
@@ -3229,15 +3233,6 @@
 	h2.yt-multi-page-menu-section-renderer /*comments and notifications headers*/
 	{
 		color: var(--main-text) !important;
-	}
-	/*notifications dropdown*/
-	ytd-notification-renderer ytd-menu-renderer yt-icon 
-	{
-		color: var(--main-text) !important;
-	}
-	ytd-notification-renderer ytd-menu-renderer yt-icon:hover
-	{
-		color: var(--main-color) !important;
 	}
 	/*gear icon*/
 	ytd-simple-menu-header-renderer .yt-spec-button-shape-next__icon
