--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2052,14 +2052,19 @@
 	ytd-topbar-logo-renderer.style-scope > a > div > ytd-logo > yt-icon > yt-icon-shape > icon-shape > div > svg > svg:nth-child(1) > g:nth-child(1) > path:nth-child(1),
 	#yt-logo-updated_yt2 > g:nth-child(1) > path:nth-child(1),
 	/*cookie version*/
-	svg.ytd-consent-bump-v2-lightbox > g:nth-child(1) > g:nth-child(1) > path:nth-child(1)
+	svg.ytd-consent-bump-v2-lightbox > g:nth-child(1) > g:nth-child(1) > path:nth-child(1),
+	/*2024-06-15*/
+	#yt-logo-updated_yt3 > g:nth-child(1) > path:nth-child(1),
+	#yt-logo-updated_yt4 > g:nth-child(1) > path:nth-child(1)
 	{
 		fill: var(--main-color) !important;
 	}
 	ytd-topbar-logo-renderer.style-scope > a > div > ytd-logo > yt-icon > yt-icon-shape > icon-shape > div > svg > svg:nth-child(1) > g:nth-child(2),
 	#youtube-paths_yt2,
 	/*cookie version*/
-	g.ytd-consent-bump-v2-lightbox:nth-child(2) > g:nth-child(1) > *
+	g.ytd-consent-bump-v2-lightbox:nth-child(2) > g:nth-child(1) > *,
+	/*2024-06-15*/
+	ytd-topbar-logo-renderer.style-scope > a:nth-child(1) > div:nth-child(1) > ytd-logo:nth-child(1) > yt-icon:nth-child(1) > span:nth-child(1) > div:nth-child(1)
 	{
 		fill: var(--main-text) !important;
 	}
