--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -1162,7 +1162,7 @@
     left: 0px;
     width: 100%;
     text-align: center;
-    color: var(--yt-continue-text-color);
+    color: var(--main-text) !important;
     font-size: 9pt;
     font-weight: bold;
   }
