various: chapters, desc, titles, var overrides

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -404,6 +404,27 @@
 		/*2024-06-12 new layout*/
 		--yt-spec-outline-inverse-medium: var(--second-background) !important;
 	}
+	html:not(.style-scope) {
+		--yt-spec-themed-blue: var(--main-color) !important;
+		--primary-text-color: var(--light-theme-text-color) !important;
+		--primary-background-color: var(--light-theme-background-color) !important;
+		--secondary-text-color: var(--light-theme-secondary-color) !important;
+		--disabled-text-color: var(--light-theme-disabled-color) !important;
+		--divider-color: var(--light-theme-divider-color) !important;
+		--error-color: #dd2c00;
+		--primary-color: var(--main-color) !important;
+		--light-primary-color: var(--main-color) !important;
+		--dark-primary-color: var(--main-color) !important;
+		--accent-color: var(--main-color) !important;
+		--light-accent-color: var(--main-color) !important;
+		--dark-accent-color: var(--main-color) !important;
+		--light-theme-background-color: var(--main-background) !important;
+		--light-theme-base-color: var(--main-text) !important;
+		--light-theme-text-color: var(--main-text) !important;
+		--light-theme-secondary-color: var(--dimmer-text) !important;
+		--light-theme-disabled-color: var(--second-background) !important;
+		--light-theme-divider-color: var(--hover-background) !important;
+	}
 	/*Scrollbar fix for chrome*/
 	*:not([hide-scrollbar]) ::-webkit-scrollbar-thumb
 	{
@@ -2178,7 +2199,7 @@
 	/*2024-08-03*/
 	yt-icon#icon.style-scope.ytd-reel-shelf-renderer span.yt-icon-shape.yt-spec-icon-shape div svg g path,
 	/*2024-10-23*/
-	ytd-reel-shelf-renderer.style-scope:nth-child(3) > div:nth-child(1) > h2:nth-child(1) > yt-icon:nth-child(1) > span:nth-child(1) > div:nth-child(1) > svg:nth-child(1) > path:nth-child(1)
+	ytd-reel-shelf-renderer.style-scope:nth-child(3) > div:nth-child(1) > h2:nth-child(1) > yt-icon:nth-child(1) > span:nth-child(1) > div:nth-child(1) > svg:nth-child(1) > path:nth-child(1), ytd-reel-shelf-renderer.style-scope:nth-child(2) > div:nth-child(1) > h2:nth-child(1) > yt-icon:nth-child(1) > span:nth-child(1) > div:nth-child(1) > svg:nth-child(1) > path:nth-child(1)
 	{
 		fill: var(--main-color) !important;
 	}
@@ -2362,13 +2383,29 @@
 	}
 
 	/*Chapters*/
+	/*2024-10-27*/
+	.YtChipShapeActive /*chip or tab*/
+	{
+		background: var(--second-background) !important;
+		color: var(--main-text) !important;
+	}
+	.YtChipShapeInactive,
+	.YtwTimelineChapterViewModelHost
+	{
+		background: var(--hover-background) !important;
+		color: var(--main-text) !important;
+	}
 	/*title*/
-	h4.ytd-macro-markers-list-item-renderer
+	h4.ytd-macro-markers-list-item-renderer,
+	/*2024-10-27*/
+	.shelf-header-layout-wiz__title, .YtwTimelineChapterViewModelTitle
 	{
 		color: var(--main-text) !important;
 	}
 	/*timestamp*/
-	#time.ytd-macro-markers-list-item-renderer
+	#time.ytd-macro-markers-list-item-renderer,
+	/*2024-10-27*/
+	.YtwTimelineItemViewModelTimestamp
 	{
 		color: var(--main-color) !important;
 		background-color: transparent !important;
@@ -2904,7 +2941,12 @@
 	/*video description text*/
 	.yt-core-attributed-string--link-inherit-color
 	{
-		color: var(--dimmer-text) !important;
+		color: var(--main-text) !important;
+	}
+	/*ai generated video summary*/
+	.video-summary-content-view-model-wiz
+	{
+		color: var(--main-text) !important;
 	}
 
 	/*Heart icon in comments*/
