--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2187,6 +2187,7 @@
 	#yt-ringo2-svg_yt30 > g:nth-child(1) > path:nth-child(1),
 	#yt-ringo2-svg_yt34 > g:nth-child(1) > path:nth-child(1),
 	#yt-ringo2-svg_yt35 > g:nth-child(1) > path:nth-child(1)
+	#logo-icon path[fill="#FF0033"]
 	{
 		fill: var(--main-color) !important;
 	}
