--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.3.8
+@version 4.3.9
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -2415,12 +2415,13 @@
 	/*Chapters*/
 	/*2024-10-27*/
 	.YtChipShapeActive /*chip or tab*/
+	.ytChipShapeActive /*nice*/
 	{
 		background: var(--second-background) !important;
 		color: var(--main-text) !important;
 	}
-	.YtChipShapeInactive,
-	.YtwTimelineChapterViewModelHost
+	.YtChipShapeInactive, .ytChipShapeInactive
+	.YtwTimelineChapterViewModelHost, .ytwTimelineChapterViewModelHost
 	{
 		background: var(--hover-background) !important;
 		color: var(--main-text) !important;
