--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.4.0
+@version 4.4.1
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -2432,14 +2432,14 @@
 	/*title*/
 	h4.ytd-macro-markers-list-item-renderer,
 	/*2024-10-27*/
-	.shelf-header-layout-wiz__title, .YtwTimelineChapterViewModelTitle
+	.shelf-header-layout-wiz__title, .YtwTimelineChapterViewModelTitle,  .ytwTimelineChapterViewModelTitle
 	{
 		color: var(--main-text) !important;
 	}
 	/*timestamp*/
 	#time.ytd-macro-markers-list-item-renderer,
 	/*2024-10-27*/
-	.YtwTimelineItemViewModelTimestamp
+	.YtwTimelineItemViewModelTimestamp, .ytwTimelineItemViewModelTimestamp
 	{
 		color: var(--main-color) !important;
 		background-color: transparent !important;
@@ -3030,8 +3030,8 @@
 
 	/*Chat*/
 	/*open panel*/
-	.YtCarouselTitleViewModelTitle,
-	.YtTextCarouselItemViewModelHost
+	.YtCarouselTitleViewModelTitle, .ytCarouselTitleViewModelTitle
+	.YtTextCarouselItemViewModelHost, .ytTextCarouselItemViewModelHost
 	{
 		color: var(--main-text) !important;
 	}
